Clean up meta-info

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,18 +5,12 @@
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width,initial-scale=1" name="viewport">
-  <meta content="description" name="description">
+  <meta content="Dean McNeil | Developer" name="description">
   <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
-  
-  <!-- original icon stuff that came with template -->
-  <!-- <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
-  <link href="./static/icon.ico" rel="icon"> -->
 
-  <!-- from realfavicongenerator -->
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./static/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./static/favicon-16x16.png">
@@ -24,72 +18,79 @@
   <link rel="mask-icon" href="./static/assets/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
-  <!-- from realfavicongenerator -->
 
-  <title>Dean McNeil | Developer</title>  
+  <title>Dean McNeil | Developer</title>
 
-<link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
+  <link href="./static/main.3f6952e4.css" rel="stylesheet">
+</head>
 
 <body class="">
-<div id="site-border-left"></div>
-<div id="site-border-right"></div>
-<div id="site-border-top"></div>
-<div id="site-border-bottom"></div>
- <!-- Add your content of header -->
-<header>
-  <nav class="navbar  navbar-fixed-top navbar-default">
-    <div class="container">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+  <div id="site-border-left"></div>
+  <div id="site-border-right"></div>
+  <div id="site-border-top"></div>
+  <div id="site-border-bottom"></div>
+
+  <header>
+    <nav class="navbar  navbar-fixed-top navbar-default">
+      <div class="container">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
+          aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+          <ul class="nav navbar-nav ">
+            <li><a href="./" title="">01 : Home</a></li>
+            <li><a href="./projects" title="">02 : Projects</a></li>
+            <li><a href="./about" title="">03 : About</a></li>
+            <li><a href="./contact" title="">04 : Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
-      <div class="collapse navbar-collapse" id="navbar-collapse">
-        <ul class="nav navbar-nav ">
-          <li><a href="./" title="">01 : Home</a></li>
-          <li><a href="./projects" title="">02 : Projects</a></li>
-          <li><a href="./about" title="">03 : About</a></li>
-          <li><a href="./contact" title="">04 : Contact</a></li>
-        </ul>
-
-
-      </div> 
-    </div>
-  </nav>
-</header>
-
-<div class="section-container">
+  <div class="section-container">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
             <h1 class="h2">03 : About</h1>
           </div>
-          
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
                   <h3>Development Interests</h3>
-                    <p>
-                      My interests in web development lie in the back end, but I do have experience with React. I'm also interested in software development.
-                    </p>
+                  <p>
+                    My interests in web development lie in the back end, but I do have experience with React. I'm also
+                    interested in software development.
+                  </p>
                   <h3>Why I Like Programming</h3>
-                    <p>
-                      Programming is fascinating to me because of its problem-solving process; there is great power in the idea of dividing a big problem into many smaller problems, solving those smaller problems, and putting those solutions together to solve the big problem.
-                    </p> 
+                  <p>
+                    Programming is fascinating to me because of its problem-solving process; there is great power in the
+                    idea of dividing a big problem into many smaller problems, solving those smaller problems, and
+                    putting those solutions together to solve the big problem.
+                  </p>
                   <h3>Personal Interests</h3>
-                    <p>
-                      I'm passionate about languages and linguistics. I've learned to speak Spanish as a second language. I studied a fair bit of German, and I've also dabbled in French, Portuguese, Italian, Swedish, and Quechua. I'm fascinated by the complexity of languages, their idiosyncracies, and how they interact with each other.
-                    </p>
-                    <p>
-                      I'm also passionate about traveling. There are many lessons to be learned from spending time immersed in another culture. I've traveled across the United States, only missing the Northeast, Alaska, and Hawaii. I've spent time in Italy, Canada, Chile, Peru, Argentina, Brazil, Colombia, Costa Rica, Guatemala, and Mexico.
-                    </p>
-                    <p>
-                      I enjoy being active. I like hiking, playing soccer, riding my longboard, going to the gym, and practicing yoga. I also enjoy reading, philosophy, chess, and Pokémon.
-                    </p>
+                  <p>
+                    I'm passionate about languages and linguistics. I've learned to speak Spanish as a second language.
+                    I studied a fair bit of German, and I've also dabbled in French, Portuguese, Italian, Swedish, and
+                    Quechua. I'm fascinated by the complexity of languages, their idiosyncracies, and how they interact
+                    with each other.
+                  </p>
+                  <p>
+                    I'm also passionate about traveling. There are many lessons to be learned from spending time
+                    immersed in another culture. I've traveled across the United States, only missing the Northeast,
+                    Alaska, and Hawaii. I've spent time in Italy, Canada, Chile, Peru, Argentina, Brazil, Colombia,
+                    Costa Rica, Guatemala, and Mexico.
+                  </p>
+                  <p>
+                    I enjoy being active. I like hiking, playing soccer, riding my longboard, going to the gym, and
+                    practicing yoga. I also enjoy reading, philosophy, chess, and Pokémon.
+                  </p>
                 </div>
                 <div class="col-xs-12 col-md-6">
                   <img src="./static/assets/images/profile.jpg" class="img-responsive" alt="">
@@ -97,15 +98,12 @@
               </div>
             </div>
           </div>
-          
-          
-       </div>
+        </div>
       </div>
     </div>
   </div>
 
-
-<!-- <footer class="footer-container text-center">
+  <!-- <footer class="footer-container text-center">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -115,13 +113,13 @@
   </div>
 </footer> -->
 
-<script>
-  document.addEventListener("DOMContentLoaded", function (event) {
-     navActivePage();
-  });
-</script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function (event) {
+      navActivePage();
+    });
+  </script>
 
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
 
 <script>
   (function (i, s, o, g, r, a, m) {
@@ -134,7 +132,8 @@
   ga('send', 'pageview');
 </script>
 
---> <script type="text/javascript" src="./static/main.70a66962.js"></script></body>
-
+-->
+  <script type="text/javascript" src="./static/main.70a66962.js"></script>
+</body>
 
 </html>
