--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,18 +5,12 @@
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width,initial-scale=1" name="viewport">
-  <meta content="description" name="description">
+  <meta content="Dean McNeil | Developer" name="description">
   <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
-  
-  <!-- original icon stuff that came with template -->
-  <!-- <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
-  <link href="./static/icon.ico" rel="icon"> -->
 
-  <!-- from realfavicongenerator -->
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./static/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./static/favicon-16x16.png">
@@ -24,119 +18,112 @@
   <link rel="mask-icon" href="./static/assets/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
-  <!-- from realfavicongenerator -->
 
-  <title>Dean McNeil | Developer</title>  
+  <title>Dean McNeil | Developer</title>
 
-<link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
+  <link href="./static/main.3f6952e4.css" rel="stylesheet">
+</head>
 
 <body class="">
-<div id="site-border-left"></div>
-<div id="site-border-right"></div>
-<div id="site-border-top"></div>
-<div id="site-border-bottom"></div>
- <!-- Add your content of header -->
-<header>
-  <nav class="navbar  navbar-fixed-top navbar-default">
-    <div class="container">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+  <div id="site-border-left"></div>
+  <div id="site-border-right"></div>
+  <div id="site-border-top"></div>
+  <div id="site-border-bottom"></div>
+
+  <header>
+    <nav class="navbar  navbar-fixed-top navbar-default">
+      <div class="container">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
+          aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+          <ul class="nav navbar-nav ">
+            <li><a href="./" title="">01 : Home</a></li>
+            <li><a href="./projects" title="">02 : Projects</a></li>
+            <li><a href="./about" title="">03 : About</a></li>
+            <li><a href="./contact" title="">04 : Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
-      <div class="collapse navbar-collapse" id="navbar-collapse">
-        <ul class="nav navbar-nav ">
-          <li><a href="./" title="">01 : Home</a></li>
-          <li><a href="./projects" title="">02 : Projects</a></li>
-          <li><a href="./about" title="">03 : About</a></li>
-          <li><a href="./contact" title="">04 : Contact</a></li>
-        </ul>
-
-
-      </div> 
-    </div>
-  </nav>
-</header>
-
-<div class="section-container">
+  <div class="section-container">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
             <h1 class="h2">04 : Contact</h1>
           </div>
-          
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
-               <form action="submit_form" method="post" class="reveal-content">
-                  <div class="row">
-                    <div class="col-md-7">
-                      <div class="form-group">
-                        <input name="email" type="email" class="form-control" id="email" placeholder="Email">
-                      </div>
-                      <div class="form-group">
-                        <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject">
-                      </div>
-                      <div class="form-group">
-                        <textarea name="message" class="form-control" rows="5" placeholder="Enter your message"></textarea>
-                      </div>
-                      <button type="submit" class="btn btn-default btn-lg">Send</button>
+              <form action="submit_form" method="post" class="reveal-content">
+                <div class="row">
+                  <div class="col-md-7">
+                    <div class="form-group">
+                      <input name="email" type="email" class="form-control" id="email" placeholder="Email">
                     </div>
-                    <div class="col-md-5 address-container text-center">
-                      <!-- <ul class="list-unstyled">
+                    <div class="form-group">
+                      <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject">
+                    </div>
+                    <div class="form-group">
+                      <textarea name="message" class="form-control" rows="5"
+                        placeholder="Enter your message"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-default btn-lg">Send</button>
+                  </div>
+                  <div class="col-md-5 address-container text-center">
+                    <!-- <ul class="list-unstyled">
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                           </span>
-                          + 33 9 07 45 12 65
+                          Phone Number
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          e-mail@mail.io
+                          Email
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                           </span>
-                          42 rue Moulbert 75016 Paris
+                          Address
                         </li>
                       </ul> -->
-                      <!-- <h3>Follow me on social networks</h3> -->
-                      <!-- <a href="http://www.facebook.com" title="" class="fa-icon">
+                    <!-- <h3>Follow me on social networks</h3> -->
+                    <!-- <a href="http://www.facebook.com" title="" class="fa-icon">
                         <i class="fa fa-facebook"></i>
                       </a> -->
-                      <!-- <a href="http://www.twitter.com" title="" class="fa-icon">
+                    <!-- <a href="http://www.twitter.com" title="" class="fa-icon">
                         <i class="fa fa-twitter"></i>
                       </a> -->
-                      <h3 >Connect with me on LinkedIn</h3>
-                      <a href="https://linkedin.com/in/deanomcneil/" target="_blank" title="" class="fa-icon">
-                        <i class="fa fa-linkedin btn btn-default"></i>
-                      </a>
-                      <hr>
-                      <h3>See my work on GitHub</h3>
-                      <a href="https://github.com/d-mcneil" target="_blank" title="" class="fa-icon">
-                        <i class="fa fa-github btn btn-default"></i>
-                      </a>
-
-
-                    </div>
+                    <h3>Connect with me on LinkedIn</h3>
+                    <a href="https://linkedin.com/in/deanomcneil/" target="_blank" title="" class="fa-icon">
+                      <i class="fa fa-linkedin btn btn-default"></i>
+                    </a>
+                    <hr>
+                    <h3>See my work on GitHub</h3>
+                    <a href="https://github.com/d-mcneil" target="_blank" title="" class="fa-icon">
+                      <i class="fa fa-github btn btn-default"></i>
+                    </a>
                   </div>
-                </form>
+                </div>
+              </form>
             </div>
-
           </div>
-         
-       </div>
+        </div>
       </div>
     </div>
   </div>
 
-
-<!-- <footer class="footer-container text-center">
+  <!-- <footer class="footer-container text-center">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -146,13 +133,13 @@
   </div>
 </footer> -->
 
-<script>
-  document.addEventListener("DOMContentLoaded", function (event) {
-     navActivePage();
-  });
-</script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function (event) {
+      navActivePage();
+    });
+  </script>
 
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
 
 <script>
   (function (i, s, o, g, r, a, m) {
@@ -165,6 +152,8 @@
   ga('send', 'pageview');
 </script>
 
---> <script type="text/javascript" src="./static/main.70a66962.js"></script></body>
+-->
+  <script type="text/javascript" src="./static/main.70a66962.js"></script>
+</body>
 
 </html>
