--- a/templates/index.html
+++ b/templates/index.html
@@ -5,18 +5,12 @@
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width,initial-scale=1" name="viewport">
-  <meta content="description" name="description">
+  <meta content="Dean McNeil | Developer" name="description">
   <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
-  
-  <!-- original icon stuff that came with template -->
-  <!-- <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
-  <link href="./static/icon.ico" rel="icon"> -->
 
-  <!-- from realfavicongenerator -->
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./static/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./static/favicon-16x16.png">
@@ -24,43 +18,42 @@
   <link rel="mask-icon" href="./static/assets/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
-  <!-- from realfavicongenerator -->
 
-  <title>Dean McNeil | Developer</title>  
+  <title>Dean McNeil | Developer</title>
 
-<link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
+  <link href="./static/main.3f6952e4.css" rel="stylesheet">
+</head>
 
 <body class="minimal">
-<div id="site-border-left"></div>
-<div id="site-border-right"></div>
-<div id="site-border-top"></div>
-<div id="site-border-bottom"></div>
-<!-- Add your content of header -->
-<header>
-  <nav class="navbar  navbar-fixed-top navbar-inverse">
-    <div class="container">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+  <div id="site-border-left"></div>
+  <div id="site-border-right"></div>
+  <div id="site-border-top"></div>
+  <div id="site-border-bottom"></div>
+
+  <header>
+    <nav class="navbar  navbar-fixed-top navbar-inverse">
+      <div class="container">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
+          aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+          <ul class="nav navbar-nav ">
+            <li><a href="./" title="">01 : Home</a></li>
+            <li><a href="./projects" title="">02 : Projects</a></li>
+            <li><a href="./about" title="">03 : About</a></li>
+            <li><a href="./contact" title="">04 : Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
-      <div class="collapse navbar-collapse" id="navbar-collapse">
-        <ul class="nav navbar-nav ">
-          <li><a href="./" title="">01 : Home</a></li>
-          <li><a href="./projects" title="">02 : Projects</a></li>
-          <li><a href="./about" title="">03 : About</a></li>
-          <li><a href="./contact" title="">04 : Contact</a></li>
-        </ul>
-
-
-      </div> 
-    </div>
-  </nav>
-</header>
-<!-- Add your site or app content here -->
-  <div class="hero-full-container background-image-container white-text-container" style="background-image: url('./static/assets/images/space.jpg')">
+  <div class="hero-full-container background-image-container white-text-container"
+    style="background-image: url('./static/assets/images/space.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
@@ -81,14 +74,14 @@
     </div>
   </div>
 
-<script>
-  document.addEventListener("DOMContentLoaded", function (event) {
-     type();
-     movingBackgroundImage();
-  });
-</script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function (event) {
+      type();
+      movingBackgroundImage();
+    });
+  </script>
 
-
-<script type="text/javascript" src="./static/main.70a66962.js"></script></body>
+  <script type="text/javascript" src="./static/main.70a66962.js"></script>
+</body>
 
 </html>
