--- a/templates/contact.html
+++ b/templates/contact.html
@@ -127,6 +127,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
+        <meta content="Mashup templates have been developped by Orson.io team" name="author">
         <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
       </div>
     </div>
