--- a/templates/projects.html
+++ b/templates/projects.html
@@ -233,7 +233,8 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a target="_blank" href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+        <meta content="Mashup templates have been developped by Orson.io team" name="author">
+        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
       </div>
     </div>
   </div>
