--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,13 +11,13 @@
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./static/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./static/favicon-16x16.png">
-  <link rel="manifest" href="./static/assets/site.webmanifest">
-  <link rel="mask-icon" href="./static/assets/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="manifest" href="./static/site.webmanifest" />
+  <link rel="icon" href="./static/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./static/apple-touch-icon.png" />
+  <link rel="icon" sizes="192x192" href="./static/logo192.png" />
+  <link rel="mask-icon" href="./static/safari-pinned-tab.svg" color="#393e46" />
+  <meta name="msapplication-TileColor" content="#00aba9" />
+  <meta name="theme-color" content="#393e46" />
 
   <title>Dean McNeil | Developer</title>
 
